Fixing z-index issue on about page

--- a/assets/css/external.css
+++ b/assets/css/external.css
@@ -70,7 +70,7 @@ form.ext.std .field span.alert { color: #a00; font-weight: bold; }
 .keygen .crypt { text-align: center; padding: 0.4em 0; font-size: 1.5em; font-weight: bold; }
 
 #page > .about { padding-top: 4em; }
-.about #return { position: fixed; top: 0; right: 0; left: 0; background: #fff; padding: 0 1em; }
+.about #return { position: fixed; top: 0; right: 0; left: 0; background: #fff; padding: 0 1em; z-index: 1100; }
 .about ul { text-align: left; padding: 0.7em 1em; font-size: 0.9em; background: rgba(0,0,0,0.05); list-style: none; }
 .about ul li { text-align: left; padding: 0.4em 0; font-size: 1em; }
 .about ul li i.icon-angle-right { color: rgba(0,0,0,0.2); }
